Fix z-index: ensure hamburger menu cross is clickable when overlay is open

--- a/my-portfolio/src/components/header/index.module.scss
+++ b/my-portfolio/src/components/header/index.module.scss
@@ -5,7 +5,7 @@
   @include flex-between;
   position: sticky;
   top: 6px;
-  z-index: $z-fixed;
+  z-index: $z-modal;
   height: 80px;
   padding: 0 $space-6;
   margin: 0 $space-4;
